2007-09-27  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fix for bug #461195

	* gui/e-calendar-marshal.list: Remove needless marshalers.
	* gui/e-memos.c:
	* gui/e-tasks.c: Use GObject's marshalers.

2007-09-27  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #477045

	* gui/calendar-commands.c:
	* gui/calendar-component.c:
	* gui/dialogs/cal-attachment-select-file.c:
	* gui/dialogs/comp-editor.c:
	* gui/dialogs/event-editor.c:
	* gui/dialogs/task-editor.c:
	* gui/e-cal-popup.c:
	* gui/e-calendar-table.c:
	* gui/e-calendar-view.c:
	* gui/e-day-view.c:
	* gui/e-memo-table.c:
	* gui/e-week-view.c:
	* gui/memos-component.c:
	* gui/memos-control.c:
	* gui/tasks-component.c:
	* gui/tasks-control.c:
	Use standard icon names where applicable.

2007-09-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #346686

	* gui/e-cal-model.h: (e_cal_model_test_row_editable):
	* gui/e-cal-model.c: (e_cal_model_test_row_editable): New helper
	function to check if row is editable or not, based on calendar.
	* gui/e-cal-model-memos.c: (ecmm_is_cell_editable):
	* gui/e-cal-model-tasks.c: (ecmt_is_cell_editable):
	* gui/e-cal-model-calendar.c: (ecmc_is_cell_editable):
	* gui/e-cal-model.c: (ecm_is_cell_editable):
	Uses new helper function to determine if row is editable.

2007-09-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #324472

	* gui/e-calendar-table.c: (struct AffectedComponents),
	(e_calendar_table_complete_selected),  (get_selected_components_cb),
	(do_for_selected_components), (mark_comp_complete_cb),
	(mark_comp_incomplete_cb): Added new helper structure and functions.
	* gui/e-calendar-table.c: (mark_as_complete_cb),
	(mark_as_incomplete_cb): Using new helper functions.
	* gui/e-cal-model-tasks.h: (e_cal_model_tasks_mark_comp_complete),
	(e_cal_model_tasks_mark_comp_incomplete): New functions (replace old).
	* gui/e-cal-model-tasks.c: (commit_component_changes),
	(ecmt_set_value_at), (e_cal_model_tasks_mark_comp_complete),